[#422] Use the same grayscale darker for all trays and search input. Use a lighter grayscale for the quick links Update color link in banner to fix accessibility contrast issue

--- a/assets/app.css
+++ b/assets/app.css
@@ -166,6 +166,9 @@ h3 {
   a {
     color: var(--gray-10)
   }
+  .lux-alert-info a {
+    color: var(--color-bleu-de-france-darker);
+  }
 }
 
 /* Mobile rules */
